Prevent line wrapping on add groups button

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -74,3 +74,7 @@ code {
   text-align: center;
   border-top: 1px solid lightgray;
 }
+
+.top-buttons {
+  font-size: 1rem !important;
+}
